--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
@@ -100,12 +100,17 @@ connection-definitions.query-timeout=Any configured query timeout in seconds.
 connection-definitions.recovery-password=The password used for recovery.
 connection-definitions.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation.
 connection-definitions.recovery-plugin-properties=The properties for the recovery plugin.
-connection-definitions.recovery-security-domain=The security domain used for recovery.
+connection-definitions.recovery-security-domain=The PicketBox security domain used for recovery.
+connection-definitions.recovery-elytron-enabled=Indicates that an Elytron authentication context will be used for recovery.
+connection-definitions.recovery-authentication-context=The Elytron authentication context used for recovery (current authentication-context will be used if unspecified).
 connection-definitions.recovery-username=The user name used for recovery.
 connection-definitions.same-rm-override=Using this attribute, you can unconditionally set whether javax.transaction.xa.XAResource.isSameRM(XAResource) returns true or false.
 connection-definitions.security-application=Indicates that application-supplied parameters, such as from getConnection(user, pw), are used to distinguish connections in the pool.
-connection-definitions.security-domain=Specifies the security domain which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
-connection-definitions.security-domain-and-application=Indicates that either application-supplied parameters, such as from getConnection(user, pw), or Subject (from security domain), are used to distinguish connections in the pool.
+connection-definitions.security-domain=Specifies the PicketBox security domain which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
+connection-definitions.security-domain-and-application=Indicates that either application-supplied parameters, such as from getConnection(user, pw), or Subject (from PicketBox security domain), are used to distinguish connections in the pool.
+connection-definitions.elytron-enabled=Enables Elytron security for handling authentication of connections. The Elytron authentication-context to be used will be current context if no context is specified (see authentication-context).
+connection-definitions.authentication-context=The Elytron authentication context which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
+connection-definitions.authentication-context-and-application=Indicates that either application-supplied parameters, such as from getConnection(user, pw), or Subject (provided by Elytron after authenticating using configured authentication-context), are used to distinguish connections in the pool.
 connection-definitions.set-tx-query-timeout=Whether to set the query timeout based on the time remaining until transaction timeout. Any configured query timeout will be used if there is no transaction.
 connection-definitions.test-connection-in-pool=Test if a connection can be obtained.
 connection-definitions.use-ccm=Enable the use of a cached connection manager.
