--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
@@ -33,7 +33,8 @@ resource-adapter.clear-statistics=Clear statistics values for this resource.
 resource-adapter.transaction-support=Specifies the transaction support level of the resource adapter.
 resource-adapter.wm-security=Toggle on/off wm.security for this resource adapter. In case of false all wm-security-* parameters are ignored, even the defaults.
 resource-adapter.wm-security-mapping-required=Defines if a mapping is required for security credentials.
-resource-adapter.wm-security-domain=Defines the name of the security domain that should be used.
+resource-adapter.wm-security-domain=Defines the name of the PicketBox security domain that should be used.
+resource-adapter.wm-elytron-enabled=Enables Elytron authentication for WorkManager
 resource-adapter.wm-security-default-principal=Defines a default principal name that should be added to the used Subject instance.
 resource-adapter.wm-security-default-group=Defines a default group that should be added to the used Subject instance.
 resource-adapter.wm-security-default-groups=Defines a default groups list that should be added to the used Subject instance.
