--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -114,6 +114,14 @@ undertow.single-sign-on.path=Cookie path.
 undertow.single-sign-on.http-only=Set Cookie httpOnly attribute.
 undertow.single-sign-on.secure=Set Cookie secure attribute.
 undertow.single-sign-on.cookie-name=Name of the cookie
+undertow.single-sign-on.key-store=Reference to key store containing a private key entry.
+undertow.single-sign-on.key-alias=Alias of the private key entry used for signing and verifying back-channel logout connection.
+undertow.single-sign-on.credential-reference=The credential reference to decrypt the private key entry.
+undertow.single-sign-on.credential-reference.store=The name of the credential store holding the alias to credential.
+undertow.single-sign-on.credential-reference.alias=The alias which denotes stored secret or credential in the store.
+undertow.single-sign-on.credential-reference.type=The type of credential this reference is denoting.
+undertow.single-sign-on.credential-reference.clear-text=The secret specified using clear text. Check credential store way of supplying credential/secrets to services.
+undertow.single-sign-on.client-ssl-context=Reference to the SSL context used to secure back-channel logout connection.
 undertow.listener=http listener
 undertow.listener.add=Add listener
 undertow.listener.remove=Listener name
@@ -360,6 +368,7 @@ undertow.application-security-domain.remove=Remove the application referenced se
 undertow.application-security-domain.http-authentication-factory=The HTTP Authentication Factory to be used by deployments that reference the mapped security domain.
 undertow.application-security-domain.override-deployment-config=Should the authentication configuration in the deployment be overridden by the factory.
 undertow.application-security-domain.referencing-deployments=The deployments currently referencing this mapping.
+undertow.application-security-domain.setting=Settings
 
 undertow.deployment=A deployment
 undertow.deployment.context-root=The context root of the web application
