--- a/mail/src/main/resources/org/jboss/as/mail/extension/LocalDescriptions.properties
+++ b/mail/src/main/resources/org/jboss/as/mail/extension/LocalDescriptions.properties
@@ -18,3 +18,8 @@ mail.mail-session.server.password=Password to authenticate on server
 mail.mail-session.server.name=Name of server type
 mail.mail-session.custom=Custom mail server configuration
 mail.mail-session.server.properties=JavaMail properties
+mail.mail-session.server.credential-reference=Credential (from Credential Store) to authenticate on server
+mail.mail-session.server.credential-reference.store=The name of the credential store holding the alias to credential
+mail.mail-session.server.credential-reference.type=The type of credential this reference is denoting
+mail.mail-session.server.credential-reference.alias=The alias which denotes stored secret or credential in the store
+mail.mail-session.server.credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
